# gowork

./: .gitignore  Cargo.toml  PROVIDER_REFACTOR_PLAN.md  README.md
src/: cache.rs  config.rs  image.rs  main.rs  session.rs  stats.rs
src/agent/: loop_runner.rs  mod.rs
src/cli/: mod.rs  shell.rs
src/llm/: client.rs  mod.rs  types.rs
src/tools/: bash.rs  edit_file.rs  glob_tool.rs  grep.rs  mod.rs  read_file.rs  registry.rs  todo.rs  web_fetch.rs  web_search.rs
