[package]
name = "toolkit-cli"
version = "0.1.0"
edition = "2024"
description = "A high-performance coding assistant CLI powered by LLM"

[[bin]]
name = "gowork"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"

# Utilities
anyhow = "1"
async-trait = "0.1"
colored = "3"
dirs = "6"
futures = "0.3"
rustyline = "15"
uuid = { version = "1", features = ["v4"] }

# Glob, diff, config, image
glob = "0.3"
similar = "2"
toml = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
urlencoding = "2"
once_cell = "1"
dom_smoothie = "0.17"
sha2 = "0.10"
hex = "0.4"
atty = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
